dev/tests/cases/neg/10_unclosed_paren.tv
df main() -> void {
    echo!("hi";
}
